--- a/inicio.html
+++ b/inicio.html
@@ -3,25 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Inicio</title>
 </head>
 <body>
-    <header>Explora Nuestros vehiculos</header>
-
-    <section class="secciones">
-        <h2>Bondades y cracteristicas del automovil</h2>
-        <p>Este vehiculo esta diseñado pra brindarte seguridad, confort y eficiencia.Ideal tanto para la ciudad como para viajes largos, combina tecnología de punta con un diseño elegante.</p>
-    </section>
-
-    <div class="ventajas">
-        <div class="ventaja">
-            <strong>Años de Garantia</strong>
-            <p>Disfruta de 5 años de garantia en todos nuestros vehiculos 100.000 km, asegurando tu tranquilidad y confianza en cada viaje.</p>
-        </div>
-        <div class="ventaja">
-            <strong>Años de Garantia</strong>
-            <p>Disfruta de 5 años de garantia en todos nuestros vehiculos 100.000 km, asegurando tu tranquilidad y confianza en cada viaje.</p>
-        </div>
-    </div>
+    <header>
+        <h1>Automotora Cacharro Viejo</h1>
+        <p>Descubre el modelo revolucionario de este año</p>
+    </header>
 </body>
 </html>
