--- a/inicio.html
+++ b/inicio.html
@@ -10,5 +10,19 @@
         <h1>Automotora Cacharro Viejo</h1>
         <p>Descubre el modelo revolucionario de este año</p>
     </header>
+
+    <main>
+    <section class="vehiculo">
+      <h2>Modelo Exclusivo</h2>
+      <p>Un automóvil moderno, seguro y eficiente. Disfruta de:</p>
+      <ul>
+        <li>Garantía: 5 años</li>
+        <li>Capacidad: 5 pasajeros</li>
+        <li>Motor: 2.0L Turbo</li>
+        <li>Rendimiento: 18 km/l</li>
+        <li>Procedencia: Alemania</li>
+      </ul>
+    </section>
+    
 </body>
 </html>
