--- a/inicio.html
+++ b/inicio.html
@@ -3,26 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="css/inicio_estilo.css">
     <title>Inicio</title>
 </head>
 <body>
-    <header>
-        <h1>Automotora Cacharro Viejo</h1>
-        <p>Descubre el modelo revolucionario de este año</p>
+    <header class="navbar">
+        <div class="logo">CACHARRO VIEJO</div>
+        <nav>
+            <a href="">Inicio</a>
+            <a href="">Nuestro Modelo</a>
+            <a href="">Configurador</a>
+            <a href="">Contacto</a>
+        </nav>
     </header>
 
-    <main>
-    <section class="vehiculo">
-      <h2>Modelo Exclusivo</h2>
-      <p>Un automóvil moderno, seguro y eficiente. Disfruta de:</p>
-      <ul>
-        <li>Garantía: 5 años</li>
-        <li>Capacidad: 5 pasajeros</li>
-        <li>Motor: 2.0L Turbo</li>
-        <li>Rendimiento: 18 km/l</li>
-        <li>Procedencia: Alemania</li>
-      </ul>
-    </section>
-    
+    <section class="encabezado">
+    <h1>DESCUBRE EL FUTURO DE LA CONDUCCIÓN</h1>
+    <p>Presentamos el nuevo modelo de Cacharro Viejo: innovación, estilo y rendimiento en un solo vehículo</p>
+    <a href="#configurador" class="boton-rojo">Configura el tuyo</a>
+  </section>
+
+  <section class="modelo">
+    <h2>Nuestro Revolucionario Modelo</h2>
+    <div class="linea-roja"></div>
+    <div class="contenido-modelo">
+      <img src="imagenes/portada.jpg" alt="Automóvil Cacharro Viejo" height="300" width="1200">
+      <div class="detalles">
+        <h3>El automóvil que redefine la experiencia de conducción</h3>
+        <p>Este modelo combina tecnología de punta, confort y un diseño impresionante que no pasará desapercibido.</p>
+        <ul class="caracteristicas">
+          <li><i class="fas fa-shield-alt"></i> <strong>5 años</strong> de garantía</li>
+          <li><i class="fas fa-users"></i> <strong>5 pasajeros</strong></li>
+          <li><i class="fas fa-gas-pump"></i> <strong>18 km/l</strong> en ciudad</li>
+          <li><i class="fas fa-cogs"></i> Motor <strong>2.0L Turbo</strong></li>
+          <li><i class="fas fa-bolt"></i> <strong>180 HP</strong> de potencia</li>
+          <li><i class="fas fa-globe"></i> Origen: <strong>Japonés</strong></li>
+        </ul>
+      </div>
+    </div>
+  </section>
+
+<footer>
+    <p>Síguenos en:
+      <a href="#">Facebook</a> |
+      <a href="#">Instagram</a> |
+      <a href="#">TikTok</a>
+    </p>
+    <p>2025 Desarrollado por Matias Garcia. Todos los derechos reservados.</p>
+  </footer>
 </body>
 </html>
