--- a/inicio.html
+++ b/inicio.html
@@ -10,17 +10,8 @@
     <script src="js/elegir.js"></script>
     <script src="js/precio_total.js"></script>
     <script src="js/delizar_secciones.js"></script>
-
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Inicio</title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-        <link rel="stylesheet" href="css/inicio_estilo.css">
-        <script src="js/elegir.js"></script>
-        <script src="js/precio_total.js"></script>
-        <script src="js/smooth-scroll.js"></script>
-    </head>
+    <script src="js/guardar_datos.js"></script>
+</head>
 
 <body>
     <header class="navbar">
@@ -149,7 +140,7 @@
             <div class="resumen-area">
                 <h3 class="selection-subtitle">Resumen de tu configuración</h3>
                 <div class="precio-total" id="precio-total">Precio Total: <span>$3.500.000</span></div>
-                <a href="#" class="boton-finalizar">Finalizar Compra</a>
+                <a href="boleta.html" class="boton-finalizar">Finalizar Compra</a>
             </div>
         </div>
     </section>
