--- a/inicio.html
+++ b/inicio.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
 
-    <section class="encabezado">
+    <section class="encabezado" id="inicio">
         <h1>DESCUBRE EL FUTURO DE LA CONDUCCIÓN</h1>
         <p>Presentamos el nuevo modelo de Cacharro Viejo: innovación, estilo y rendimiento en un solo vehículo</p>
         <a href="#configurador" class="boton-rojo">Configura el tuyo</a>
